--- a/.github/workflows/check solutions.yml
+++ b/.github/workflows/check solutions.yml
@@ -28,14 +28,14 @@ jobs:
       - name: Pack Solution
         uses: microsoft/powerplatform-actions/pack-solution@v0
         with:
-          solution-file: 'ReviewHubDev.zip'
-          solution-folder: 'Extracted/ReviewHubDev'
+          solution-file: 'ReviewHub.zip'
+          solution-folder: 'app'
           solution-type: 'Unmanaged'
           
       - name: Check Solution
         uses: microsoft/powerplatform-actions/pack-solution@v0
         with:
-          path: 'ReviewHubDev.zip'
+          path: 'ReviewHub.zip'
           environment-url: ${{ variables.ENVIRONMENTURL }}
           client-secret: ${{ secrets.SERVICEPRINCIPALSECRET }}
           app-id: ${{ variables.SERVICEPRINCIPALCLIENTID }}
