--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,52 +1,23 @@
-name: PowerApps Quality Check and Package
+name: PowerApps Code Quality and Packaging Check
 
 on:
   push:
     branches:
-      - main  # Replace with your main branch name
+      - main
 
 jobs:
-  quality-check-and-package:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the code from GitHub repository
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v2
-
-      # Install Power Platform CLI
       - name: Install Power Platform CLI
         run: |
-          npm install -g @powerapps/cli
-
-      # Authenticate with PowerApps environment
-      - name: Authenticate with PowerApps Environment
-        run: pac auth create --url <your-environment-url> --username <your-username> --password <your-password>
-
-      # Run code analysis using Power Platform CLI
-      - name: Run PowerApps Code Analysis
-        run: pac pcf scan --path <path-to-your-component-folder>
-
-      # Check if code analysis has any errors
-      - name: Check for Code Analysis Errors
+          npm install -g powerplatform-cli
+      - name: Code Quality Check
         run: |
-          if [[ $(pac pcf scan --path <path-to-your-component-folder> --json) =~ "\"numErrors\":0," ]]; then
-            echo "Code analysis passed with no errors."
-          else
-            echo "Code analysis failed with errors."
-            exit 1
-          fi
-
-      # Package the PowerApps app
-      - name: Package PowerApps App
-        run: pac pcf push --path <path-to-your-component-folder> --solution-name <your-solution-name> --skip-validation
-
-      # Check if the package has been created successfully
-      - name: Check Package Creation Status
+          pac pcf scan --path .
+      - name: Confirm Package Build
         run: |
-          if [[ $(pac solution list --json) =~ "\"solution_.+_\" ]]; then
-            echo "Package created successfully."
-          else
-            echo "Package creation failed."
-            exit 1
-          fi
+          pac solution list --details --json > solutions.json
+          node -pe "JSON.parse(fs.readFileSync('solutions.json')).map(s => s.uniqueName).forEach(s => execSync(\`pac solution pack -n \${s}\`))"
