--- a/.github/workflows/check-solutions.yml
+++ b/.github/workflows/check-solutions.yml
@@ -20,6 +20,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
+    outputs:
+      result: ${{ steps.check-soltuion.outputs.stdout }}
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -32,6 +34,7 @@ jobs:
           solution-type: 'Unmanaged'
           
       - name: Check Solution
+        id: check-soltuion
         uses: microsoft/powerplatform-actions/check-solution@v0
         with:
           path: 'ReviewHub.zip'
@@ -39,3 +42,14 @@ jobs:
           client-secret: ${{ secrets.SERVICEPRINCIPALSECRET }}
           app-id: ${{ vars.SERVICEPRINCIPALCLIENTID }}
           tenant-id: ${{ vars.SERVICEPRINCIPALTENANTID }}
+          
+  get-output-check-solution:
+    runs-on: ubuntu-latest
+    needs: [quality-check]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: echo ${{steps.quality-check.outputs.result}}
+      
