--- a/.github/workflows/check-solutions.yml
+++ b/.github/workflows/check-solutions.yml
@@ -48,11 +48,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: [quality-check]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      
       - name: Download log
         uses: actions/download-artifact@v3
         with:
           name: CheckSolutionLogs
+          
       - name: Count Number of Critical
-        run: grep -o "Critical" *_ReviewHub.sarif | wc -l
+        run: (grep -o "Critical" *_ReviewHub.sarif | wc -l) / 3 >> "$GITHUB_OUTPUT"
+        
+      - name: Count Number of High
+        run: (grep -o "High" *_ReviewHub.sarif | wc -l) / 3 >> "$GITHUB_OUTPUT"
       
