--- a/.github/workflows/check-solutions.yml
+++ b/.github/workflows/check-solutions.yml
@@ -81,4 +81,4 @@ jobs:
           
       - name: Confirm Quality of Solution
         if: ${{ 1 > 0 }}
-        run: echo "::error ::There are ${{ steps.critical-count-calculated.outputs.stdout }} critical findings and ${{ steps.high-count-calculated.outputs.stdout }} high findings. Run solution checker on your solution, resolve findings and try again."; exit 1;
+        run: echo "::error ::There are 1 or more critical or high issues with the solution. Run solution checker on your solution, resolve findings and try again."; exit 1;
