--- a/.github/workflows/check-solutions.yml
+++ b/.github/workflows/check-solutions.yml
@@ -80,5 +80,5 @@ jobs:
           run: echo $(((${{ steps.critical-count.outputs.stdout }} / 3) - 7))
           
       - name: Confirm Quality of Solution
-        if: ${{ 1 > 0 }}
+        if: ${{ steps.critical-count-calculated.outputs.stdout > 0 && steps.high-count-calculated.outputs.stdout > 0 }}
         run: echo "::error ::There are 1 or more critical or high issues with the solution. Run solution checker on your solution, resolve findings and try again."; exit 1;
