--- a/.github/workflows/generate-release.yml
+++ b/.github/workflows/generate-release.yml
@@ -49,7 +49,7 @@ jobs:
       
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo "::set-output name=date::$(date +'%m.%d.%Y')"
       
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
