--- a/.github/workflows/check-solutions.yml
+++ b/.github/workflows/check-solutions.yml
@@ -20,6 +20,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -32,6 +33,7 @@ jobs:
           solution-type: 'Unmanaged'
           
       - name: Check Solution
+        id: check-solution
         uses: microsoft/powerplatform-actions/check-solution@v0
         with:
           path: 'ReviewHub.zip'
@@ -39,3 +41,43 @@ jobs:
           client-secret: ${{ secrets.SERVICEPRINCIPALSECRET }}
           app-id: ${{ vars.SERVICEPRINCIPALCLIENTID }}
           tenant-id: ${{ vars.SERVICEPRINCIPALTENANTID }}
+          
+          
+  assert-quality-check:
+    runs-on: ubuntu-latest
+    needs: [quality-check]
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Download log
+        uses: actions/download-artifact@v3
+        with:
+          name: CheckSolutionLogs
+          
+      - name: Count Number of Critical
+        id: critical-count
+        uses: mathiasvr/command-output@v2.0.0
+        with:
+            run: grep -o "Critical" *_ReviewHub.sarif | wc -l
+        
+      - name: Count Number of High
+        id: high-count
+        uses: mathiasvr/command-output@v2.0.0
+        with:
+          run: grep -o "High" *_ReviewHub.sarif | wc -l
+      
+      - name: Convert high count to number
+        uses: mathiasvr/command-output@v2.0.0
+        id: high-count-calculated
+        with:
+          run: echo $(((${{ steps.high-count.outputs.stdout }} / 3) - 9))
+          
+      - name: Convert critical count to number
+        uses: mathiasvr/command-output@v2.0.0
+        id: critical-count-calculated
+        with:
+          run: echo $(((${{ steps.critical-count.outputs.stdout }} / 3) - 7))
+          
+      - name: Confirm Quality of Solution
+        if: ${{ steps.critical-count-calculated.outputs.stdout > 0 || steps.high-count-calculated.outputs.stdout > 0 }}
+        run: echo "::error ::There are 1 or more critical or high issues with the solution. Run solution checker on your solution, resolve findings and try again."; exit 1;
